# conversational-agent

./: .dockerignore  .env  .env.example  .gitignore  DESIGN.md  LICENSE  NOTES.md  README.md  docker-compose.yaml  pyproject.toml  requirements-backend.txt  requirements-frontend.txt  requirements-ingestion.txt
dataset/: CREATION.md  download.py
src/: app.py  chat_history.py  config.py  evaluate.py  ingest.py
src/backend/: Dockerfile
src/backend/app/: __init__.py  main.py
src/backend/app/api/routes/: chat.py  health.py  websocket.py  ws_utils.py
src/backend/app/core/: config.py  logging.py
src/backend/app/database/: __init__.py  base.py  postgres.py  redis.py
src/backend/app/dependencies/: cache.py  chat.py  database.py  rag.py  retrieval.py  vector_db.py  websocket.py
src/backend/app/embeddings/: __init__.py  base.py  sentence_transformers.py
src/backend/app/models/: chat.py  rag.py
src/backend/app/retrieval/: __init__.py  base.py  vector.py
src/backend/app/retrieval/rag/: __init__.py  rag.py
src/backend/app/retrieval/rag/query/: __init__.py  engine.py
src/backend/app/retrieval/rag/search/: __init__.py  hyde.py
src/backend/app/services/: cache.py  chat.py  database.py  rag.py
src/backend/app/services/chat/: __init__.py  cache.py  service.py
src/backend/app/services/rag/: __init__.py  retrieval.py  service.py
src/evaluation/: evaluate.py
src/frontend/: Dockerfile  app.py  chainlit.md  config.py
src/ingest/: ingest.py
