[project]
name = "conversational-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = []

[dependency-groups]
backend = [
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.30.0",
    "dspy>=3.0.3",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.1",
    "torch==2.2.2",
    "numpy<2.0.0",
]
frontend = [
    "chainlit>=2.8.3",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
]
ingestion = [
    "pymupdf>=1.26.5",
    "pypdf>=6.1.1",
    "psycopg[binary,pool]>=3.2.10",
    "sentence-transformers>=5.1.1",
    "torch==2.2.2",
    "numpy<2.0.0",
]
dev = [
    "ruff>=0.14.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.1",
    "pytest-cov>=4.0.0",
    "faker>=24.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src/backend"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/backend/app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
